@@ -1,3 +1,8 @@
+2007-02-10 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* src/listsort.c, src/s_string_list.c: Applied patch by DJ:
+	[ 1637387 ] Enhance sort functions.  Thanks.
+
 2006-12-23 Carlos Nieves Onega <cnieves@iespana.es>
 
 	* src/s_object.c (s_object_attrib_add_attrib_in_object):
